# pokemon-kafka

./: .env.example  .gitignore  AGENTS.md  README.md  SKILL.md  config.toml.example  docker-compose.yml  jcard.toml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: test.yml
docker/alerts-consumer/: Dockerfile  consumer.py
docker/flink-sql/: init.sql  submit-jobs.sh
docker/game-consumer/: Dockerfile  consumer.py  jsonl_writer.py
docker/tapes-proxy/: Dockerfile
docker/telemetry-consumer/: Dockerfile  consumer.py
docs/superpowers/plans/: 2026-03-10-kafka-flink-telemetry.md  2026-03-17-confluent-cloud-publisher.md
docs/superpowers/specs/: 2026-03-10-kafka-flink-telemetry-design.md  2026-03-10-tapes-kafka-rearchitecture-design.md  2026-03-17-confluent-cloud-publisher-design.md
pokedex/: evolve_results.json  log1.md  log2.md  log3.md  log34.md  run_test.json  run_test2.json  run_test3.json  run_test4.json
references/: routes.json  type_chart.json
scripts/: agent.py  config.py  diagnose.py  dlt_pipeline.py  entrypoint.sh  evolve.py  game_events.py  historical_observer.py  install.sh  kafka_producer.py  memory_file.py  memory_reader.py  observe_cli.py  observer.py  pathfinding.py  publisher.py  query_telemetry.py  run_10_agents.py  tape_reader.py  tape_writer.py
tests/: conftest.py  tape_helpers.py  test_agent.py  test_alerts_consumer.py  test_config.py  test_dlt_pipeline.py  test_evolve.py  test_game_events.py  test_historical_observer.py  test_kafka_producer.py  test_memory_file.py  test_memory_reader.py  test_observe_cli.py  test_observer.py  test_pathfinding.py  test_publisher.py  test_query_telemetry.py  test_run_10_agents.py  test_tape_reader.py  test_tape_writer.py  test_telemetry_sink.py
