[project]
name = "pokemon-agent"
version = "0.1.0"
description = "Autonomous Pokemon Red player via PyBoy"
requires-python = ">=3.11"
dependencies = [
    "pyboy",
    "pillow",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "tests"]

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/diagnose.py", "scripts/install.sh", "scripts/observe_cli.py", "scripts/probe_*.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
