[project]
name = "pokemon-agent"
version = "0.1.0"
description = "Autonomous Pokemon Red player via PyBoy"
requires-python = ">=3.11"
dependencies = [
    "pyboy",
    "pillow",
    "numpy",
    "duckdb>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
dlt = [
    "dlt[duckdb]>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "tests"]

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/diagnose.py", "scripts/install.sh", "scripts/observe_cli.py", "scripts/probe_*.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
